--- a/style.css
+++ b/style.css
@@ -1,83 +1,22 @@
-a.button {
-    color:#FFFF00;
-  }
-  .fullscreen
-  {
-    height:600px;
-  }
-  
-  .fade-enter-active,
-  .fade-leave-active {
-    transition: opacity .5s;}
-  
-  .fade-enter,
-  .fade-leave-active {
-    opacity: 0
-  }
-  
-  .thead-default, .thead-default a {
-    background-color: #00bcd4;
-    color:#fff;
-  }
-  
-  .tbody-default {
-    background-color: #eee;
-  }
-  
-  a {
-    padding: 10px 10px 10px 10px
-  }
-  
-  .center-title {
-    text-align: center;
-  }
-  
-  a.cal-selected,
-  a.cal-selected:focus {
-    background-color: #368CB2;
-    color: #fff;
-    border-radius: 10px;
-    font-weight: bold;}
-  .calendar {
-    width: 100%;
-    border: 1px solid #ddd;
-  }
-  
-  .calendar td a {
-    text-decoration: none;
-    color: #006699;
-  }
-  
-  .calendar td a:hover {
-    text-decoration: underline;
-    color: #FF0000;
-  }
-  
-  .calendar td, .calendar th {
-    width: 13%;
-    border: 1px solid #ddd;
-    padding: 3px 3px 3px 3px;
-  }
-  
-  .calendar th {
-    background-color: #005999;
-    color: #FFFF00;
-    font-weight: bold;
-  }
-  .calendar td {
-    height: 50px;
-    font-weight: bold;
-    vertical-align: top;
-  }
-  
-  .blank {
-    background-color: #ddd;
-  }
-  
-  .weekend {
-    color: #999;
-  }
-  
-  .occassion {
-    background-color: #ffffbf;
-  }
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 100px);
+  grid-template-rows: 50px repeat(5, 100px);
+  justify-items: end;
+  margin: 1rem;
+}
+
+.box {
+  align-items: center;
+  color: brown;
+}
+
+.day {
+  display: grid;
+  justify-items: end;
+}
+
+.title {
+  color: lightslategray;
+  text-align: start;
+}
