--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .calendar {
   display: grid;
-  grid-template-columns: repeat(7, 100px);
+  grid-template-columns: repeat(7, 14.28%);
   grid-template-rows: 50px repeat(5, 100px);
   justify-items: end;
   margin: 1rem;
